fix: make sure lists returned by recipe registry are immutable